Test CSV Logging (without new writer) and modify subsystems